<?xml version="1.0"?>
<package format="2">
  <name>unodopo_navigation</name>
  <version>1.2.6</version>
  <description>
    The unodopo_navigation provides roslaunch scripts for starting the navigation.
  </description>
  <license>Apache 2.0</license>
  <maintainer email="lkw303@gmail.com">Kai</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>unodopo_bringup</exec_depend>
</package>
